<resources>
    <string name="app_name">MadMath</string>
    <string name="contrasena">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="usuario">Usuario</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="usuarioLogin">Usuario</string>
    <string name="contrase_aLogin">Contraseña</string>
    <string name="login">login</string>
    <string name="lvl8">lvl8</string>
    <string name="lvl7">lvl7</string>
    <string name="lvl6">lvl6</string>
    <string name="lvl5">lvl5</string>
    <string name="lvl4">lvl4</string>
    <string name="lvl3">lvl3</string>
    <string name="lvl2">lvl2</string>
    <string name="lvl1">lvl1</string>
    <string name="_3">/3</string>
    <string name="_1">1</string>
    <string name="respuesta1">respuesta1</string>
    <string name="respuesta2">respuesta2</string>
    <string name="respuesta3">respuesta3</string>
    <string name="siguiente_pregunta">Siguiente pregunta</string>
    <string name="usernametitle">usernameTitle</string>
    <string name="question">question</string>
    <string name="score">score</string>
    <string name="introduce_tu_respuesta">Introduce tu respuesta</string>
    <string name="enhorabuena">Enhorabuena!</string>
    <string name="nombre_puntuaci_n">Nombre / Puntuación</string>
    <string name="puntos">Puntos:</string>
    <string name="ya_has_conseguido_la_puntuaci_n_necesaria_para_avanzar_al_siguiente_nivel_para_una_justa_y_mejor_experiencia_podr_s_volver_a_jugar_este_nivel_una_vez_termines_la_partida">-Ya has conseguido la puntuación necesaria para avanzar al siguiente nivel. ----------------------------------------Para una justa y mejor experiencia, podrás volver a jugar este nivel una vez termines la partida.</string>
    <string name="ya_has_conseguido_la_puntuaci_n_m_xima_para_el_juego_para_una_justa_y_mejor_experiencia_podr_s_volver_a_jugar_este_nivel_una_vez_reinicies_tu_progreso">-Ya has conseguido la puntuación máxima para el juego. ----------------------------------------Para una justa y mejor experiencia, podrás volver a jugar este nivel una vez reinicies tu progreso.</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="reg_strate">Regístrate!</string>
</resources>