<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pizarra"
    tools:context=".levels.Level1">
    <ImageView
        android:id="@+id/healthBar"
        android:layout_width="68dp"
        android:layout_height="62dp"
        android:layout_marginLeft="324dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/life_100" />

    <TextView
        android:id="@+id/tv_totalPreguntas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/healthBar"
        android:layout_marginLeft="330dp"
        android:layout_marginTop="18dp"
        android:text="@string/_1"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/totalPreguntas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_totalPreguntas"
        android:layout_below="@+id/healthBar"
        android:layout_marginTop="18dp"
        android:text="@string/_3"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:text="@string/usernametitle"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_putuacion"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="78dp"
        android:text="Puntos:"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:layout_marginLeft="50dp"
        android:text="@string/score"
        android:textSize="30sp"
        android:textStyle="bold" />




    <TextView
        android:id="@+id/tv_pregunta1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/myTextViewStyles"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/healthBar"
        android:layout_marginTop="104dp"
        android:layout_marginBottom="10dp"
        android:text="@string/question" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="317dp"
        android:layout_height="225dp"
        android:layout_below="@+id/tv_pregunta1"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="58dp">

        <RadioButton
            android:id="@+id/respuesta1"
            style="@style/radionbutton"
            android:layout_width="302dp"
            android:layout_height="77dp"
            android:layoutDirection="rtl"
            android:text="@string/respuesta1"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/respuesta2"
            style="@style/radionbutton"
            android:layout_width="303dp"
            android:layout_height="75dp"
            android:layout_gravity="start"
            android:layoutDirection="rtl"
            android:text="@string/respuesta2"
            android:textAlignment="textStart"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/respuesta3"
            style="@style/radionbutton"
            android:layout_width="303dp"
            android:layout_height="75dp"
            android:layout_gravity="start"
            android:layoutDirection="rtl"
            android:text="@string/respuesta3"
            android:textAlignment="textStart"
            android:textColor="@color/white" />
    </RadioGroup>

    <Button
        android:id="@+id/bt_nextQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="16dp"
        android:onClick="nextQuestion"
        android:layout_below="@id/radioGroup"
        android:text="@string/siguiente_pregunta" />



</RelativeLayout>