<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/myRelative_layout"
    android:background="@drawable/background7_1"
    tools:context=".levels.Level1">
    <ImageView
        android:id="@+id/healthBar"
        android:layout_width="68dp"
        android:layout_height="62dp"
        android:layout_marginLeft="324dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/life_100" />
    <TextView
        android:id="@+id/tv_totalPreguntas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:textColor="@color/white"
        android:text="@string/_1"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/totalPreguntas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_toRightOf="@id/tv_totalPreguntas"
        android:textColor="@color/white"
        android:text="@string/_3"
        android:textSize="30sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:text="@string/usernametitle"
        android:textSize="30sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_putuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="28dp"
        android:textColor="@color/white"
        android:text="Puntos:"
        android:textSize="30sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="68dp"
        android:textColor="@color/white"
        android:text="@string/score"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_pregunta1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_totalPreguntas"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/question" />


    <EditText
        android:id="@+id/et_respuesta"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="530dp"
        android:ems="10"
        android:hint="@string/introduce_tu_respuesta"
        android:inputType="number" />

    <Button
        android:id="@+id/bt_nextQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/et_respuesta"
        android:onClick="nextQuestionlvl2"
        android:text="@string/siguiente_pregunta" />


</RelativeLayout>