<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background6"
    tools:context=".viewModels.LevelSelectorViewModel">


    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="16dp"
        android:text="@string/usernametitle"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_puntosTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/puntos"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="46dp"
        android:text="@string/score"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="302dp"
        android:layout_height="225dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="52dp"
        android:text="@string/ya_has_conseguido_la_puntuaci_n_m_xima_para_el_juego_para_una_justa_y_mejor_experiencia_podr_s_volver_a_jugar_este_nivel_una_vez_reinicies_tu_progreso"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/bt_lout"
        android:layout_width="82dp"
        android:layout_height="73dp"
        android:layout_marginTop="528dp"
        android:layout_marginEnd="184dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/lvl8"
        android:onClick="loadMainMenu"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_username"
        app:srcCompat="@drawable/ok" />

</androidx.constraintlayout.widget.ConstraintLayout>