<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/android_register_login">


    <TextView
        android:id="@+id/titleTextView"
        android:layout_centerHorizontal="true"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:text="Iniciar Sesión"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="102dp"
        android:layout_marginBottom="32dp"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_centerHorizontal="true"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:layout_marginTop="16dp"
        android:hint="@string/usuarioLogin"
        android:background="@drawable/edittext_bg"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_centerHorizontal="true"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_username"
        android:layout_marginTop="16dp"
        android:hint="@string/contrase_aLogin"
        android:inputType="textPassword"
        android:background="@drawable/edittext_bg"
        android:padding="12dp"/>

    <Button
        android:id="@+id/bt_login"
        android:layout_centerHorizontal="true"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@drawable/button_bg"
        android:textColor="#ffffff"
        android:onClick="login"
        android:layout_below="@id/et_password"
        android:layout_marginTop="32dp"/>

    <TextView
        android:id="@+id/et_registrate"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginLeft="100dp"
        android:layout_below="@+id/bt_login"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/blue"
        android:layout_marginTop="20dp"
        android:text="¿No tienes cuénta? " />



    <ImageButton
        android:id="@+id/bt_lout"
        android:layout_width="82dp"
        android:layout_height="73dp"
        android:layout_marginTop="38dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/et_registrate"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/lvl8"
        android:onClick="loadRegisterPage"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/register_button" />


</RelativeLayout>
